--- a/app/related_equipment.html
+++ b/app/related_equipment.html
@@ -146,53 +146,34 @@
     </div>
 </section>
 
-<section class="metal_powders-__section">
+
+<section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Титан</h2>
+        <h2 class="metal_powders__title">Промышленный пылесос</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <div class="metal_powders-text-styles">
-                    <p>Аддитивное производство представляет собой послойное добавление необходимого материала в виде пластиковых, керамических, композитных и металлических порошков или проволоки. На сегодняшний день существует огромное количество технологий, нацеленных на изготовление деталей под каждый тип материала.
-                        Однако стоит отметить, что 3D-печать включает в себя не только непосредственное изготовление на 3D-принтере требуемого изделия, но и весь технологический процесс производства полного цикла, включающий в себя:</p>
+                    <p>
+                        <b>Промышленный пылесос </b> – устройство, применяемое для удаления неиспользованного материала
+                        (аддитивного порошка) из рабочей камеры построения изделий в 3D-принтере после завершения
+                        процесса изготовления изделия.
+                        <br><br>
+                        Данное оборудование крайне необходимо к использованию в 3D-принтерах, работающих с порошковыми
+                        материалами по следующим причинам:
+
+                    </p>
                     <ul>
-                        <li>- разработки компьютерных 3D-моделей изделий;</li>
-                        <li>- снабжение/разработка/модернизация материалов;</li>
-                        <li>- разработка/сборка-наладка 3D-принтера;</li>
-                        <li>- охлаждение и постобработку изделий.</li>
+                        <li>- Очистка рабочей камеры, приведение ее в надлежащий вид;</li>
+                        <li>- Удаление активного материала перед открытием камеры;</li>
+                        <li>- Обеспечение пожаровзрывобезопасности, так как активный порошковый материал некоторых
+                            металлов при контакте с воздухом может привести к возгоранию или взрыву.
+                        </li>
                     </ul>
-                </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="metal_powders-text-styles">
-                    <p>Преимущества: </p>
 
-                        <ul>
-                        <li>-Низкая цена готовых изделий по сравнению с традиционными способами производства</li>
-                        <li>-Значительное повышение гибкости производства</li>
-                        <li>-Повышение конкурентоспособности производства</li>
-                        <li>-Снижение себестоимости продукции, особенно для мелкосерийнойного производства</li>
-                        <li>-Сокращение сроков выхода на рынок новой продукции</li>
-                        <li>-Интеграция компьютерных технологий и систем САПР</li>
-                        <li>-Можно вносить изменения в изделие на этапе 3D-моделирования</li>
-                        </ul>
-
-                    <p>Сферы применения:</p>
-
-                    <ul class="numeric-list">
-                        <li>1)	Автомобильная промышленность</li>
-                        <li>2)	Авиакосмическая промышленность</li>
-                        <li>3)	Судостроение</li>
-                        <li>4)	Энергетическая отрасль</li>
-                        <li>5)	Медицина</li>
-                        <li>6)	Машиностроение</li>
-
-                    </ul>
                 </div>
             </div>
         </div>
@@ -203,53 +184,219 @@
     </div>
 </section>
 
-<section class="metal_powders-__section">
+<section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Титан</h2>
+        <h2 class="metal_powders__title">Перчаточный бокс </h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <div class="metal_powders-text-styles">
-                    <p>Аддитивное производство представляет собой послойное добавление необходимого материала в виде пластиковых, керамических, композитных и металлических порошков или проволоки. На сегодняшний день существует огромное количество технологий, нацеленных на изготовление деталей под каждый тип материала.
-                        Однако стоит отметить, что 3D-печать включает в себя не только непосредственное изготовление на 3D-принтере требуемого изделия, но и весь технологический процесс производства полного цикла, включающий в себя:</p>
+                    <p>
+                       <b> Перчаточный бокс</b> – короб с установленным в нем защитными перчатками, позволяющими работать в рабочей камере без нарушения герметичности рабочей камеры после изготовления изделия. Данные перчатки необходимы, чтобы вручную удалить порошок, который не смог отсосать промышленный пылесос, тем самым завершив процедуру очистки перед открытием камеры.
+                        <br><br>
+                        Преимущества: Абсолютная безопасность.
+
+                    </p>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+<section class="metal_powders-__section metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">ТКИиИКД</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <p>
+                        <b>Технологический комплекс измерений и инспекционного контроля деталей</b>, сборочных единиц и оснастки на основе бесконтактных оптических систем оцифровки и измерений (3D-сканеры) позволяет оцифровать объект и получить его трехмерную полигональную модель. При этом решаются задачи оцифровки, и измерения объектов, контроля качества изготовления деталей, контроля оснастки, реверсивного инжиниринга, возникающие при подготовке производства и в процессе выпуска изделий.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <br>
+                    <p><b>Комплекс бесконтактных оптических измерений </b> применяется на всех этапах технологического процесса – от разработки и конструирования, до производства и эксплуатации.
+                        <br><br>
+                        Преимущества:
+
+                    </p>
                     <ul>
-                        <li>- разработки компьютерных 3D-моделей изделий;</li>
-                        <li>- снабжение/разработка/модернизация материалов;</li>
-                        <li>- разработка/сборка-наладка 3D-принтера;</li>
-                        <li>- охлаждение и постобработку изделий.</li>
+                        <li>• 	Вариативность (оптические сканеры и лазерные сканеры)</li>
+                        <li>• 	Высокая точность сканирования изделий</li>
+                        <li>•	 Применяемость в реверс-инжиниринге</li>
+                        <li>•	 Работа с изделием-образцом клиента</li>
+                        <li>•	 Точная проверка качества и геометрии готовой продукции</li>
                     </ul>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+<section class="metal_powders-__section metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">Герметичная просеивающая установка </h2>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
                 <div class="metal_powders-text-styles">
-                    <p>Преимущества: </p>
-
+                    <p>
+                        <b>Герметичная просеивающая установка</b> применяется для разделения (просеивания, сепарации) мелкодисперсных порошков от 20 до 100 мкм на фракции различного размера, посредством пропускания продукта через сита, с дополнительным воздействием ультразвука на полотно сита, в защитной среде инертного газа, предохраняющей обрабатываемые частицы от контакта с промышленной атмосферой цеха.
+                        <br>
+                        Преимущества:
+                    </p>
                     <ul>
-                        <li>-Низкая цена готовых изделий по сравнению с традиционными способами производства</li>
-                        <li>-Значительное повышение гибкости производства</li>
-                        <li>-Повышение конкурентоспособности производства</li>
-                        <li>-Снижение себестоимости продукции, особенно для мелкосерийнойного производства</li>
-                        <li>-Сокращение сроков выхода на рынок новой продукции</li>
-                        <li>-Интеграция компьютерных технологий и систем САПР</li>
-                        <li>-Можно вносить изменения в изделие на этапе 3D-моделирования</li>
+                        <li>- Удаляет из порошка крупные фракции, способные навредить равномерному плавлению материала</li>
+                        <li>- Дополнительная очистка от возможных сателлитов</li>
+                        <li>- Удобная подача порошка в Камеру</li>
                     </ul>
 
-                    <p>Сферы применения:</p>
 
-                    <ul class="numeric-list">
-                        <li>1)	Автомобильная промышленность</li>
-                        <li>2)	Авиакосмическая промышленность</li>
-                        <li>3)	Судостроение</li>
-                        <li>4)	Энергетическая отрасль</li>
-                        <li>5)	Медицина</li>
-                        <li>6)	Машиностроение</li>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+<section class="metal_powders-__section metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">Камера пескоструйная</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <p>
+                        <b>Камера пескоструйная </b> предназначена для удаления песчинок порошка с поверхности изделий, улучшению поверхности – сглаживанию шероховатости, матированию поверхности.
+                        <br><br>
+                        Преимущества:
+
+                    </p>
+                    <ul>
+                        <li>- Дополнительная очистка и первичная обработка изделия</li>
+                        <li>- Дешево и быстро</li>
                     </ul>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+<section class="metal_powders-__section metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">Обрабатывающий центр</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <p>
+                        <b>Обрабатывающий центр </b>– комплекс оборудования по постобработке изделий, который способен включать в себя, например, рефрежираторы (охлаждение), пескоструйные установки, установки по термической, электрохимической обработке и фрезерные станки.
+                        <br> <br>
+                        Преимущества обрабатывающего центра:
+
+
+                    </p>
+                    <ul>
+                        <li>- Близость и оперативность использования требуемого оборудования для постобработки изделий, выбираемого согласно ТЗ данным Заказчиком или же по усмотрению сотрудников ЦАТ в зависимости от используемого материала и геометрии изделий;</li>
+                        <li>- Своевременность и быстрота принятия решений, таким образом ускоряется процесс обработки изделий;</li>
+                        <li>- Удобство для сотрудников ЦАТ.</li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+<section class="metal_powders-__section metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">Печь вакуумная</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <p>
+                        Печь вакуумная предназначена для термообработки в вакууме или защитном газе заготовок и деталей из титана, стали, алюминия при температурах до 1300 С. Для обработки изделий из порошков ( Fe- основа), возможно изготовление печей с контролируемой инертной средой.
+                        <br><br>
+                        Преимущества:
+
+
+
+                    </p>
+                    <ul>
+                        <li>- Один из лучших способов термической постобработки изделий</li>
+                        <li>- Высокое качество поверхностей изделия</li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="metal_powders--btn">
+        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+    </div>
+</section>
+
+<div class="footer-wave">
+<section class="metal_powders-__section metal_powders-text-styles metal_powders-text-styles">
+    <div class="container">
+        <h2 class="metal_powders__title">Отрезной станок эрозионной резки </h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="metal_powders-text-styles">
+                    <p>
+                        <b>Отрезной станок эрозионной резки </b>применяется для отделения изделий от плиты построения.
+                        <br><br>
+                        Преимущества:
+
+                    </p>
+                    <ul>
+                        <li>- Позволяет обрабатывать наружные и внутренние непрямолинейные контуры деталей в чистовые размеры</li>
+                        <li>- Позволяет обрабатывать конические сходящиеся и расширяющиеся поверхности, наклонных прямолинейных и волновых поверхностей.</li>
+                    </ul>
+
+
                 </div>
             </div>
         </div>
@@ -261,6 +408,8 @@
 </section>
 
 
+
+</div>
 <footer id="footer" class="footer">
     <div class="container">
         <div class="row">
