--- a/app/index.html
+++ b/app/index.html
@@ -214,7 +214,7 @@
     </div>
     <ul class="mp-slider">
        <li>
-           <div class="mp-slide-container" style="background-image: url('http://sait11018.site/Site/static/Site_app/index_files/area1.png')"  >
+           <div class="mp-slide-container" style="background-image: url('src/areas/area3.png')"  >
                <div class="container">
                    <p class="slide-title">
                        Авиастроение
@@ -226,7 +226,7 @@
            </div>
        </li>
         <li>
-            <div class="mp-slide-container" style="background-image: url('http://sait11018.site/Site/static/Site_app/index_files/area2.png')"  >
+            <div class="mp-slide-container" style="background-image: url('src/areas/area2.png')"  >
                 <div class="container">
                     <p class="slide-title">
                         Аэрокосмос
@@ -246,7 +246,7 @@
             </div>
         </li>
         <li>
-            <div class="mp-slide-container" style="background-image: url('http://sait11018.site/Site/static/Site_app/index_files/area3.png')"  >
+            <div class="mp-slide-container" style="background-image: url('src/areas/area3.png')"  >
                 <div class="container">
                     <p class="slide-title">
                         Медицина
@@ -265,7 +265,7 @@
             </div>
         </li>
         <li>
-            <div class="mp-slide-container" style="background-image: url('http://sait11018.site/Site/static/Site_app/index_files/area4.png')"  >
+            <div class="mp-slide-container" style="background-image: url('src/areas/area2.png')"  >
                 <div class="container">
                     <p class="slide-title">
                         Автомобилестроение
@@ -285,7 +285,7 @@
             </div>
         </li>
         <li>
-            <div class="mp-slide-container" style="background-image: url('http://sait11018.site/Site/static/Site_app/index_files/area4.png')"  >
+            <div class="mp-slide-container" style="background-image: url('src/areas/area4.png')"  >
                 <div class="container">
                     <p class="slide-title">
                         Двигателестроение
