Мои любимые правки (нет)
Я не виноват, там большая половина не по фигме

--- a/app/about.html
+++ b/app/about.html
@@ -64,7 +64,7 @@
                         <a class="nav-link menu__link" href="calculator.html">Расчет стоимости</a>
                     </li>
                     <li class="nav-item menu__item">
-                        <a class="nav-link menu__link" href="#">Сотрудничество</a>
+                        <a class="nav-link menu__link" href="#">Полезные статьи</a>
                     </li>
                     <li class="nav-item menu__item">
                         <a class="nav-link menu__link" href="#">Пресс-центр</a>
@@ -89,7 +89,7 @@
         <section id="company-history" class="container">
             <div class="history">
                 <img class="history__rusatom i-re" src="src/rusatom.png" alt="РУСАТОМ" />
-                <h2 class="site-h2__section-divider">История компании</h2>
+                <h2 class="site-h2__section-divider page-about">История компании</h2>
             </div>
             <div class="row history__list">
                 <div class="col-lg-4 col-md-6 col-sm-12">
@@ -114,7 +114,7 @@
         </section>
 </div>
         <section id="company-activity" class="container">
-            <h2 class="site-h2__section-divider">Деятельность компании</h2>
+            <h2 class="site-h2__section-divider page-about">Деятельность компании</h2>
             <p class="deyatelnost-text">ООО «Русатом - Аддитивные Технологии» - это принципиально новый и активно развивающийся отраслевой интегратор, объединяющий научные и производственные предприятия Госкорпорации «Росатом» в рамках развития отечественных аддитивных технологий. Методы аддитивных технологий делают возможным получение сложнопрофильных структур и композиций деталей, основанных на применении бионического дизайна, что позволяет получать детали и целостные изделия, обладающие уникальными физическими, механическими и геометрическими свойствами. Сегодня аддитивные технологии внедряются в самые сложные и наукоемкие отрасли: атомную промышленность, аэрокосмическую индустрию, медицину, автомобилестроение и многие другие. Применение аддитивных технологий решает задачи по снижению стоимости, сокращения срока изготовления изделий и обеспечение высокой персонализации деталей.</p>
             <div class="row activity__company">
                 <div class="col-lg-4 activity__np">
@@ -180,72 +180,71 @@
             </div>
         </section>
         <section id="company-partners-in" class="container">
-            <h2 class="section__title">Отраслевые партнеры</h2>
+            <h2 class="site-h2__section-divider page-about">Отраслевые партнеры</h2>
             <div class="row otrasl-partners__row">
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/po1.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/po2.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/po3.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/po4.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/po5.png" alt="" class="partner__img" />
                 </div>
             </div>
         </section>
 <div class="footer-wave">
         <section id="company-partners-out" class="container">
-            <h2 class="section__title">Внешние партнеры</h2>
+            <h2 class="site-h2__section-divider page-about">Внешние партнеры</h2>
             <div class="row otrasl-partners__row">
                 <div class="col">
                     <img src="src/partners/pv1.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/pv2.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/pv3.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/pv4.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/pv5.png" alt="" class="partner__img" />
                 </div>
-                <div class="col">
+                <div class="col-md-2">
                     <img src="src/partners/pv6.png" alt="" class="partner__img" />
                 </div>
             </div>
         </section>
 
         <section id="company-leadership" class="container">
-            <h2 class="section__title">Руководство компании</h2>
+            <h2 class="site-h2__section-divider page-about">Руководство компании</h2>
             <div class="row">
                 <div class="col leader__unit">
-                    <img src="src/leaderfoto1.png" alt="Дуб Алексей Владимирович" class="leader__img" />
-                    <p class="leader__name">Дуб Алексей Владимирович</p>
+                    <img src="src/leaderfoto4.png" alt="Марченко Алексей Викторович" class="leader__img" />
+                    <p class="leader__name">Турундаев <br> Михаил Алексеевич</p>
                     <p class="leader__post">Генеральный директор</p>
                 </div>
                 <div class="col leader__unit">
                     <img src="src/leaderfoto2.png" alt="Григорьев Евгений Александрович" class="leader__img" />
-                    <p class="leader__name">Григорьев Евгений Александрович</p>
-                    <p class="leader__post">Исполнительный директор</p>
+                    <p class="leader__name">Григорьев <br> Евгений Александрович</p>
+                    <p class="leader__post">Директор по развитию бизнеса <br>
+                        и коммерции - заместитель <br> генерального директора</p>
                 </div>
+
+
+
                 <div class="col leader__unit">
                     <img src="src/leaderfoto3.png" alt="Береговский Владимир Васильевич" class="leader__img" />
-                    <p class="leader__name">Береговский Владимир Васильевич</p>
-                    <p class="leader__post">Директор по разработке продуктов - заместитель генерального директора</p>
-                </div>
-                <div class="col leader__unit">
-                    <img src="src/leaderfoto4.png" alt="Марченко Алексей Викторович" class="leader__img" />
-                    <p class="leader__name">Марченко Алексей Викторович</p>
-                    <p class="leader__post">Начальник коммерческого отдела</p>
+                    <p class="leader__name">Береговский <br> Владимир Васильевич</p>
+                    <p class="leader__post">Директор по разработке продуктов - <br> заместитель генерального директора</p>
                 </div>
             </div>
         </section>
