--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link menu__link" href="calculator.html">Расчет стоимости</a>
                     </li>
                     <li class="nav-item menu__item">
-                        <a class="nav-link menu__link" href="#">Сотрудничество</a>
+                        <a class="nav-link menu__link" href="#">Полезные статьи</a>
                     </li>
                     <li class="nav-item menu__item">
                         <a class="nav-link menu__link" href="#">Пресс-центр</a>
@@ -85,7 +85,7 @@
         </nav>
     </div>
 </header>
-<section class="main-page__section-after-header section">
+<section class="main-page__section-after-header section" >
     <div class="main-page__section-after-header__logo-container">
         <a href="#"><img src="img/logo.svg" alt="" class="i-re"></a>
         <a href="#"><img src="img/tvel.svg" alt="" class="i-re"></a>
@@ -104,12 +104,12 @@
             </div>
         </div>
     </div>
-    <div class="mp__arrow-down flex-centered pulse animated infinite">
-        <a href=""><img src="img/main-page_arrow-down.svg" alt="" class="i-re"></a>
+    <div class="mp__arrow-down flex-centered pulse animated infinite ">
+        <a href="#scrool-to-this-block"><img src="img/main-page_arrow-down.svg" alt="" class="i-re"></a>
     </div>
 </section>
 
-<section class="section-white-bg">
+<section class="section-white-bg" id="scrool-to-this-block">
     <div class="container">
         <div class="row mp__after-header-items">
             <div class="col-lg-6 col-md-12  wow fadeInUp animated">
@@ -398,44 +398,42 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2 footer__group">
-                <h6 class="footer__title">О компании</h6>
-                <a class="footer__link" href="#">История деятельности</a>
+                <h6 class="footer__title">История компании</h6>
                 <a class="footer__link" href="#">Деятельность</a>
-                <a class="footer__link" href="#">Наши достижения</a>
-                <a class="footer__link" href="#">Стратегические цели</a>
-                <a class="footer__link" href="#">Структура дивизиона</a>
+                <a class="footer__link" href="#">Отраслевые партнеры</a>
+                <a class="footer__link" href="#">Внешние партнеры</a>
                 <a class="footer__link" href="#">Руководство</a>
+                <a class="footer__link" href="#">Наши проекты</a>
             </div>
             <div class="col-md-2 footer__group">
                 <h6 class="footer__title">Услуги</h6>
-                <a class="footer__link" href="#">Проектирование</a>
-                <a class="footer__link" href="#">Аддитивное производство</a>
-                <a class="footer__link" href="#">Прототипирование</a>
-                <a class="footer__link" href="#">Контроль качества</a>
-                <a class="footer__link" href="#">Термообработка</a>
-                <a class="footer__link" href="#">Механообработка</a>
-                <a class="footer__link" href="#">Инжиниринг</a>
-                <a class="footer__link" href="#">Обучение</a>
-                <a class="footer__link" href="#">Портфолио наших работ</a>
+                <a class="footer__link" href="#">3D-печать</a>
+                <a class="footer__link" href="#">Оптимизация деталей</a>
+                <a class="footer__link" href="#">3D-сканирование</a>
+                <a class="footer__link" href="#">Тренинги</a>
+                <a class="footer__link" href="#">Реверс - инжиниринг</a>
+                <a class="footer__link" href="#">Аудит предприятий на предмет аддитивных
+                    технологий</a>
+
             </div>
             <div class="col-md-2 footer__group">
                 <h6 class="footer__title">Продукция</h6>
                 <a class="footer__link" href="#">3D-принтеры</a>
-                <a class="footer__link" href="#">3D-сканеры</a>
                 <a class="footer__link" href="#">Материалы</a>
-                <a class="footer__link" href="#">Комплектующие</a>
-                <a class="footer__link" href="#">Сопутствующее оборудование</a>
+                <a class="footer__link" href="#">Расчет стоимости</a>
+                <a class="footer__link" href="#">Сопутствующее оборудование</a>
             </div>
             <div class="col-md-2 footer__group">
                 <h6 class="footer__title">Пресс-центр</h6>
-                <a class="footer__link" href="#">Пресса о нас</a>
-                <a class="footer__link" href="#">Мероприятия</a>
-                <a class="footer__link" href="#">Фото и видео</a>
+                <a class="footer__link" href="#">Новости</a>
+                <a class="footer__link" href="#">Фотогалерея</a>
+                <a class="footer__link" href="#">Видеогалерея</a>
+                <a class="footer__link" href="#">Фирменный стиль</a>
                 <h6 class="footer__title"><a href="#">Сотрудничество</a></h6>
                 <h6 class="footer__title"><a href="#">Контакты</a></h6>
             </div>
             <div class="col-md-4">
-                <p class="footer__title">
+                <p class="footer__big-text">
                     ООО «Русатом - Аддитивные Технологии» - единый отраслевой интегратор Госкорпорации «Росатом» по направлению «Аддитивные технологии»
                 </p>
                 <div class="footer__social">
