--- a/app/contacts.html
+++ b/app/contacts.html
@@ -67,7 +67,7 @@
                         <a class="nav-link menu__link" href="calculator.html">Расчет стоимости</a>
                     </li>
                     <li class="nav-item menu__item">
-                        <a class="nav-link menu__link" href="#">Сотрудничество</a>
+                        <a class="nav-link menu__link" href="#">Полезные статьи</a>
                     </li>
                     <li class="nav-item menu__item">
                         <a class="nav-link menu__link" href="#">Пресс-центр</a>
@@ -138,6 +138,10 @@
                     <button type="submit" class="main-button blue">Отправить</button>
                 </form>
             </div>
+        </div>
+
+        <div class="map-container">
+            <iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3A43af3c1d33580b750c07cd687dfe4a367b97ac6c9aceb2d4a2cd00ae59063538&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
         </div>
     </div>
 </div>
