--- a/app/metal_wire.html
+++ b/app/metal_wire.html
@@ -67,7 +67,7 @@
                         <a class="nav-link menu__link" href="calculator.html">Расчет стоимости</a>
                     </li>
                     <li class="nav-item menu__item">
-                        <a class="nav-link menu__link" href="#">Сотрудничество</a>
+                        <a class="nav-link menu__link" href="#">Полезные статьи</a>
                     </li>
                     <li class="nav-item menu__item">
                         <a class="nav-link menu__link" href="#">Пресс-центр</a>
